this is the real contacme page

--- a/contactme.html
+++ b/contactme.html
@@ -1,14 +1,43 @@
-<h1>HTML Challenge</h1>
-<hr>
-<a href="https://developer.mozilla.org/en-US/">Link to MDN Documentation</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Join Valorent</title>
+</head>
+<body>
+    <h1>Contact Page</h1>
+    <table>
+        <tr>
+            <td>Fictional number</td>
+            <td>1234567898</td>
+        </tr>
+        <tr>
+            <td>fictonal Gmail</td>
+            <td>asefghjm@gmail.com</td>
+        </tr>
+    </table>
+    <hr>
+    
+    <form action="mailto:joshuamathewsam@gmail.com" method="post">
+        <table cellspacing="5">
+            <tr>
+                <th><label for="name">Your Name</label></th>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <th><label for="power">Your email</label></th>
+                <td><input type="email"></td>
+            </tr>
+            <tr>
+                <th>Your achivements</th>
+                <td><textarea rows="10" cols="80"></textarea></td>
+            </tr>
+            <tr>
+                <td><input type="submit"></td>
+            </tr>
+        </table>
+    </form>
+</body>
+</html>
 
-<table cellspacing="5">
-    <tr>
-        <td>One</td>
-        <td>Two</td>
-    </tr>
-    <tr>
-        <td>Three</td>
-        <td>Four</td>
-    </tr>
-</table>
+
